@@ -65,7 +65,7 @@
           data-object-id="{{ workspace_item.id }}"
           data-workspace-id="{{ workspace.id }}">
         {# pan to layer #}
-        <span class="ss_sprite ss_map_go sidebarbox-action-icon
+        <span class="ss_sprite ss_bullet_go sidebarbox-action-icon
                      workspace-item-pan-to"
               title="{% trans 'Pan to this layer' %}"></span>
         {# legend #}
